# candle-examples

./: .gitignore  .gitmodules  Cargo.toml  README.md  cspell.config.yaml  pixi.toml  rustfmt.toml
.github/workflows/: ci.yaml
apps/candle-example-minimum-silero-vad/: Cargo.toml  README.md
apps/candle-example-minimum-silero-vad/src/: main.rs
apps/candle-example-silero-vad/: Cargo.toml
apps/candle-example-silero-vad/src/: main.rs
apps/candle-example-whisper-mic/: Cargo.toml  README.md
apps/candle-example-whisper-mic/src/: audio.rs  main.rs  multilingual.rs
apps/candle-example-whisper-realtime/: Cargo.toml  README.md
apps/candle-example-whisper-realtime/src/: main.rs
apps/kokoro-tts/: Cargo.toml  README.md
apps/kokoro-tts/src/: main.rs
apps/kokoro-tts/src/kokoro/: kokoro.rs  mod.rs  normalize.rs  phonemizer.rs  tokenize.rs  vocab.rs
apps/kokoro-tts/src/onnx/: base.rs  kokoro.rs  mod.rs
apps/kokoro-tts/src/utils/: fileio.rs  wav.rs
apps/orpheus-tts/: Cargo.toml  README.md
apps/orpheus-tts/src/: main.rs
apps/silero-vad/: Cargo.toml  README.md
apps/silero-vad-lite-whisper-realtime-ort/: Cargo.toml
apps/silero-vad-lite-whisper-realtime-ort/src/: audio_manager.rs  main.rs  vad.rs  whisper.rs  whisper_processor.rs
apps/silero-vad-realtime/: Cargo.toml  README.md
apps/silero-vad-realtime-minimum/: Cargo.toml  README.md
apps/silero-vad-realtime-minimum/docs/: demo.cast
apps/silero-vad-realtime-minimum/src/: main.rs
apps/silero-vad-realtime/docs/: demo.cast
apps/silero-vad-realtime/src/: main.rs
apps/silero-vad-whisper-realtime/: Cargo.toml  README.md
apps/silero-vad-whisper-realtime-api/: Cargo.toml  README.md
apps/silero-vad-whisper-realtime-api/src/: api.rs  asr.rs  audio_manager.rs  main.rs  router.rs  vad.rs  whisper.rs
apps/silero-vad-whisper-realtime-ort/: Cargo.toml
apps/silero-vad-whisper-realtime-ort/src/: main.rs  vad.rs  whisper.rs  whisper_processor.rs
apps/silero-vad-whisper-realtime/docs/: demo.cast
apps/silero-vad-whisper-realtime/src/: audio_manager.rs  main.rs  whisper.rs
apps/silero-vad/docs/: demo.cast
apps/silero-vad/src/: main.rs
apps/whisper-api/: Cargo.toml  README.md
apps/whisper-api/src/: huggingface.rs  main.rs  router.rs  vad.rs  whisper.rs
apps/whisper-realtime/: Cargo.toml  README.md
apps/whisper-realtime/docs/: demo.cast
apps/whisper-realtime/src/: audio.rs  bs1770.rs  main.rs  multilingual.rs
hack/: hftf
python/test/: whisper-tensor-visualize.py  whisper-test.py
