[workspace.package]
version = "0.0.1"
authors = ["Project AIRI"]
edition = "2024"
rust-version = "1.85"
readme = "README.md"
homepage = "https://github.com/proj-airi/candle-examples"
repository = "https://github.com/proj-airi/candle-examples"
license = "MIT"
publish = false

[workspace]
resolver = "3"
members = [
    "apps/orpheus-tts",
    "apps/silero-vad",
    "apps/silero-vad-realtime",
    "apps/silero-vad-realtime-minimum",
    "apps/silero-vad-whisper-realtime",
    "apps/silero-vad-lite-whisper-realtime-ort",
    "apps/silero-vad-whisper-realtime-ort",
    "apps/whisper-api",
    "apps/whisper-realtime",
]
lints = { clippy = { nursery = {level = "warn", priority = -1}, pedantic = { level = "warn", priority = -1 }, missing_errors_doc = "allow", module_name_repetitions = "allow", unused_async = "allow", cast_precision_loss = "allow", cast_sign_loss = "allow", cast_possible_truncation = "allow", unused_self = "allow"}}

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = true
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = "symbols"
