[package]
name = "orpheus-tts"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
candle-core = { version = "0.9.1" }
candle-nn = { version = "0.9.1" }
candle-transformers = { version = "0.9.1" }
clap = { version = "4.5.38", features = ["derive"] }
hf-hub = "0.4.2"
rand = "0.9.1"
serde_json = "1.0.140"
tokenizers = "0.21.1"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"

[features]
default = []
metal = [
    "candle-core/metal",
    "candle-nn/metal",
    "candle-transformers/metal"
]
cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda"
]
