[package]
name = "silero-vad-realtime-minimum"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
byteorder = "1.5.0"
candle-core = { version = "0.9.1" }
candle-onnx = "0.9.1"
candle-transformers = { version = "0.9.1" }
clap = { version = "4.5.38", features = ["derive"] }
cpal = "0.15.3"
hf-hub = "0.4.2"
rand = "0.9.1"
rubato = "0.16.2"
serde_json = "1.0.140"
symphonia = "0.5.4"
tokenizers = "0.21.1"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.19"

[features]
default = []
cuda = []
metal = []
