[package]
name = "silero-vad-whisper-realtime-ort"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
byteorder = "1.5.0"
clap = { version = "4.5.38", features = ["derive"] }
cpal = "0.15.3"
hf-hub = "0.4.2"
rand = "0.9.1"
rubato = "0.16.2"
serde_json = "1.0.140"
symphonia = "0.5.4"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
tokio = "1.45.1"
crossbeam-channel = "0.5.15"
tokenizers = "0.21.2"
ndarray = "0.16.1"
serde = { version = "1.0.219", features = ["derive"] }
lazy_static = "1.5.0"
rustfft = "6.4.0"
ndarray-stats = "0.6.0"
log = "0.4.27"

[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "2.0.0-rc.10", features = ["ndarray", "coreml"] }

[target.'cfg(target_os = "windows")'.dependencies]
ort = { version = "2.0.0-rc.10", features = ["ndarray", "directml", "cuda"] }

[target.'cfg(target_os = "linux")'.dependencies]
ort = { version = "2.0.0-rc.10", features = ["ndarray", "cuda"] }
