[package]
name = "whisper-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
byteorder = "1.5.0"
candle-core = { version = "0.9.1" }
candle-nn = { version = "0.9.1" }
candle-transformers = { version = "0.9.1" }
candle-onnx = { version = "0.9.1" }
clap = { version = "4.5.38", features = ["derive"] }
cpal = "0.15.3"
hf-hub = "0.4.2"
rand = "0.9.1"
rubato = "0.16.2"
serde_json = "1.0.140"
symphonia = "0.5.4"
tokenizers = "0.21.1"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
tokio = "1.45.1"
crossbeam-channel = "0.5.15"
axum = { version = "0.8.4", features = ["multipart"] }
serde = { version = "1.0.219", features = ["derive"] }

# Server-sent events and HTTP utilities
futures = "0.3.31"
tokio-stream = "0.1.17"
axum-extra = { version = "0.9.5", features = ["typed-header"] }
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["fs", "cors"] }

[features]
default = []
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
